Fixed misalignment on sample background

--- a/overlay/style.css
+++ b/overlay/style.css
@@ -1,4 +1,5 @@
 body {
+  margin: 0;
   background-color: transparent;
   background-image: url("image.png");
   background-size: 1920px 1080px;
